# Tooling-only config. No [project]/[build-system] tables: this repo is not a
# packaged distribution, so this file exists solely to configure ruff.

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Signal-heavy, low-noise gate. Pyflakes (F) catches real defects: unused
# imports/variables, undefined names, and f-string mistakes. E9 catches syntax
# errors. Pure-style pycodestyle rules (E4/E5/E7) are intentionally left out so
# the gate flags bugs, not formatting opinions, on this pre-existing codebase.
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# database.py is a pure re-export facade (split out of the old monolith in the
# refactor(db) series). Its imports exist to expose the public surface, so they
# are intentionally "unused" inside the module itself.
"backend/database.py" = ["F401"]
# services/sorting_service.py is the compatibility facade for the
# services/sorting/ package split (2026-07). It deliberately keeps every
# historical import — the monkeypatch-seam names (verify_image_readable,
# scan_folder, move_image, copy_image, parse_metadata_job, add_images_batch)
# and the sorting_models / sorting_session_store re-exports — even where the
# facade body no longer calls them, because tests patch and import them at
# this path (tests/test_sorting_service_pins.py). Same rationale as
# database.py above.
"backend/services/sorting_service.py" = ["F401"]
# services/image_service.py is the compatibility facade for the
# services/image/ package split (2026-07). Same rationale as
# sorting_service.py above: the verbatim import block plus the
# _constants/_filters re-imports exist so every historical module attribute
# (db, move_file_to_trash, resolve_existing_indexed_image_path, the selection
# constants, the coercers/sanitizers) keeps resolving at
# services.image_service.<name> for tests that patch and read them there
# (tests/test_image_service_pins.py, tests/test_routers/test_images.py).
"backend/services/image_service.py" = ["F401"]
# tag_rules.py is the compatibility facade for the tag_vocab/ data-table split
# (2026-07). It re-imports every extracted table so the 8 production importers
# (`from tag_rules import <NAME>`) and the pin/monkeypatch seams
# (tests/test_tag_rules_pins.py, tests/test_tag_training_filters.py) keep
# resolving names on this module; BUILTIN_TAG_SETS / BUILTIN_EXCLUSION_RULES /
# WEIGHTED_GROUPS are pure re-exports the facade body itself never calls.
# Same rationale as database.py above.
"backend/tag_rules.py" = ["F401"]
# services/censor_service.py is the compatibility facade for the
# services/censor/ package split (2026-07). Same rationale as image_service.py
# above: the verbatim import block (incl. the model_health seam names
# get_model_health / get_default_legacy_model_path patched on this module
# object, db, save_and_reconcile_checked, resolve_existing_indexed_image_path)
# plus the _paths_match_runtime_case re-import exist so every historical module
# attribute keeps resolving at services.censor_service.<name> for tests that
# patch and read them there (tests/test_censor_service_pins.py,
# tests/test_routers/test_prompts_censor_similarity_artists.py,
# tests/test_resource_safety.py).
"backend/services/censor_service.py" = ["F401"]
# routers/images.py is the compatibility facade for the routers/images_parts/
# package split (2026-07). Same rationale as image_service.py above: the
# verbatim header import block (incl. the ``sys`` / ``subprocess`` module
# singletons the open-folder test patches through this namespace, and the
# typing/fastapi/pydantic names historical code may resolve here) plus the
# images_parts.models re-imports exist so every historical module attribute
# keeps resolving at routers.images.<name> for tests that patch and import
# them there (tests/test_images_router_pins.py, tests/test_routers/
# test_images.py:1838+2022, tests/test_reconnect_missing_files.py).
"backend/routers/images.py" = ["F401"]
# artist_identifier.py is the compatibility FILE facade for the artist/
# package split (2026-07). Same rationale as censor_service.py above: the
# verbatim header import block (incl. the ``urllib.request`` module singleton
# the runtime suite patches through this namespace as
# ``artist_identifier.urllib.request``) plus the artist.* re-imports exist so
# every historical module attribute keeps resolving at
# artist_identifier.<name> for tests that patch and read them there
# (tests/test_artist_identifier_pins.py, tests/test_artist_identifier_runtime.py,
# tests/test_artist_gpu_toggle.py, tests/test_artist_diagnostics_legacy_path.py,
# tests/test_model_service.py, tests/fixtures/ml_fixtures.py).
"backend/artist_identifier.py" = ["F401"]
# services/dataset_export_service.py is the compatibility FILE facade for the
# services/dataset_export/ package split (2026-07). Same rationale as
# censor_service.py above: the verbatim header import block (incl. the
# ``shutil`` / ``database`` module singletons tests patch through this
# namespace as ``export_service.shutil.copy2`` / ``des.db.update_image_path``,
# and the dataset_naming / tag_export_service / dataset_session_service /
# path_validation re-binds — ``render_stem`` is patched ON this module object
# and read back through _svc() by planning._plan_single_rename) plus the
# dataset_export.* re-imports exist so every historical module attribute keeps
# resolving at services.dataset_export_service.<name> for tests that patch and
# read them there (tests/test_dataset_export_pins.py,
# tests/test_dataset_export.py:149-164).
"backend/services/dataset_export_service.py" = ["F401"]
# tagger.py is the compatibility FILE facade for the tagger_* mixin split
# (2026-07). Same rationale as artist_identifier.py above: the verbatim header
# import block (incl. csv/json/PIL.Image/endpoint_label/get_hf_endpoint_order,
# now called only from the tagger_* mixins) is kept so every historical module
# attribute keeps resolving at tagger.<name> for tests that patch and read
# them there — tagger.ort / tagger.hf_hub / tagger._ensure_imports /
# tagger.DEFAULT_MODEL / tagger.MODELS (tests/test_tagger_pins.py,
# tests/test_tagger.py, tests/test_resource_safety.py,
# tests/fixtures/ml_fixtures.py).
"backend/tagger.py" = ["F401"]
# image_manager.py is the compatibility FILE facade for the
# image_manager_gates / image_manager_records / image_manager_executor
# sibling-module split (2026-07). Same rationale as censor_service.py above:
# the verbatim header import block stays — ThreadPoolExecutor /
# ProcessPoolExecutor are monkeypatch seams tests patch on this module object
# (tests/test_image_manager.py:783+) AND the names image_manager_executor
# resolves through this facade at call time; PARSED_METADATA_VERSION is
# re-exported for tests/test_image_manager_pins.py — plus the gates/records/
# executor re-imports exist so every historical module attribute keeps
# resolving at image_manager.<name> for the pin suite and for
# services/sorting/scan.py's image_manager_module.* reads.
"backend/image_manager.py" = ["F401"]
# similarity.py is the compatibility FILE facade for the similarity_* mixin
# split (2026-07). Same rationale as tagger.py above: the verbatim header
# import block stays — ``get_state_dir`` is autouse-patched on this module by
# tests/conftest.py:66 and read back through _svc() by
# similarity_vector_cache._get_index_dir (the split-killer seam);
# SIMILARITY_DEFAULT_LIMIT / SIMILARITY_DEFAULT_THRESHOLD /
# DUPLICATE_THRESHOLD / DUPLICATE_SYNC_MAX_EMBEDDINGS / DUPLICATE_CHUNK_SIZE
# and the ``similarity_ann`` module singleton are patch/pin surfaces the
# moved mixins resolve through this namespace — plus the similarity_errors /
# similarity_math re-imports exist so every historical module attribute (the
# 7 exception classes, bytes_to_embedding, cosine_similarity) keeps resolving
# at similarity.<name> for services.similarity_service,
# services.duplicate_group_service, model_health._clip_model_loaded, and the
# suites that patch and read them there (tests/test_similarity_pins.py,
# tests/test_resource_safety.py, tests/test_similarity_ann.py,
# tests/test_similarity_vector_cache.py).
"backend/similarity.py" = ["F401"]
# services/tag_export_service.py is the compatibility FILE facade for the
# services/tag_export/ package split (2026-07). Same rationale as
# dataset_export_service.py above: the verbatim header import block (incl. the
# ``database`` module singleton tests patch through this namespace as
# ``tag_export_service.db.<fn>`` in tests/test_resource_safety.py) plus the
# tag_export.* re-imports exist so every historical module attribute — the
# identity-shared objects (NL_COMPOSE_MODES / VALID_CONTENT_MODES /
# VALID_OUTPUT_MODES and the shared callables) that
# services.dataset_export_service and services/dataset_export/* origin-import
# from here, and the settable ``count_selection_token_ids`` seam patched by
# tests/test_routers/test_vlm.py — keeps resolving at
# services.tag_export_service.<name> (tests/test_tag_export_pins.py).
"backend/services/tag_export_service.py" = ["F401"]
# db_images_read.py is the compatibility FILE facade for the
# db_images_query / db_images_paginate / db_images_lookup sibling-module split
# (2026-07). Same rationale as database.py above: its import block exists so
# database.py's 21-name import (database.py:249, incl. the private
# _get_filtered_count) keeps resolving BY REFERENCE — the identity contract
# ``database.X is db_images_read.X`` and the shared connection-provider pin
# ``db_images_read.get_db is db_core.get_db`` are locked by
# tests/test_db_images_read_pins.py (TestReExportContract); the facade body
# itself calls none of them.
"backend/db_images_read.py" = ["F401"]
# db_query.py is the compatibility FILE facade for the db_query_columns /
# db_query_base / db_query_filters / db_query_filters_exclude / db_query_post
# sibling-module split (2026-07). Same rationale as database.py above: its
# import block exists so the four consumer namespaces keep resolving BY
# REFERENCE — db_images_query (38 names), db_images_paginate (36),
# db_images_lookup (2), and database.py (43), a 55-name identity union locked
# by tests/test_db_query_pins.py (TestReExportIdentityUnion), plus the
# _HAS_METADATA_CLAUSE constant historical code resolves here; the facade body
# itself calls none of them.
"backend/db_query.py" = ["F401"]
# services/model_service.py is the compatibility FILE facade for the
# model_service_helpers / model_service_inventory / model_service_prepare
# sibling-module split (2026-07). Same rationale as image_manager.py above:
# the verbatim header import block stays — ensure_group /
# ensure_group_with_soft_deps / DependencyInstallResult / get_sam3_checkpoint_path
# / get_toriigate_model_dir / get_wd14_model_dir / TAGGER_MODELS / shutil are
# monkeypatch/pin seams tests patch and read on this module object
# (tests/test_model_service_pins.py, tests/test_model_service.py,
# tests/test_routers/test_prompts_censor_similarity_artists.py) AND the names
# the moved bodies resolve back through _svc() at call time — plus the
# helpers/inventory/prepare re-imports (_artist_resolve_url,
# _artist_checkpoint_url, _materialize_existing_file, ...) exist so every
# historical module attribute keeps resolving at services.model_service.<name>
# (aesthetic.py's lazy _direct_download_file import, routers/models.py).
"backend/services/model_service.py" = ["F401"]
# metadata_parser/__init__.py is the package top module of the metadata_parser
# split (stages 1+2+3, 2026-07). Stage 3 moved the verify_image_readable body
# to metadata_parser/_runtime.py; the __init__ re-import is a pure by-reference
# re-export the package body itself never calls -- production consumers
# (similarity.py, services/image_service.py, services/sorting_service.py,
# services/tagging/worker.py) do `from metadata_parser import
# verify_image_readable` and tests/test_metadata_parser_pins.py locks the name
# on this module. Same rationale as database.py above.
"backend/metadata_parser/__init__.py" = ["F401"]
# model_health.py is the compatibility FILE facade for the model_health_probes
# / model_health_paths sibling-module split (2026-07). Same rationale as
# services/model_service.py above: the verbatim header import block stays —
# the config dir getters + constants (ARTIST_KALOSCOPE_CHECKPOINT,
# ARTIST_KALOSCOPE_CLASS_MAPPING, ARTIST_LSNET_CODE_PATH), importlib / os /
# subprocess / warnings, exclusive_ai_runtime and _canonicalize_yolo_class_name
# are monkeypatch/seam surfaces tests patch and the moved bodies resolve back
# through _svc() at call time — plus the probes/paths re-imports
# (_module_available, _probe_torch_runtime, _load_yolo_class_names,
# get_clip_local_model_path, get_sam3_checkpoint_path, ...) exist so every
# historical module attribute keeps resolving at model_health.<name> for the
# 5 downstream from-import identity seams (services/model_service.py,
# services/censor_service.py, similarity.py, services/similarity_service.py,
# routers/artists.py) and the suites that patch and read them there
# (tests/test_model_health_pins.py, tests/test_model_health.py,
# tests/test_artist_diagnostics_legacy_path.py).
"backend/model_health.py" = ["F401"]
# services/dataset_session_service.py is the compatibility FILE facade for the
# services/dataset_session/ package split (2026-07). Same rationale as
# dataset_export_service.py above: the verbatim header import block (kept so
# every historical attribute keeps resolving here) plus the dataset_session.*
# re-imports exist so every historical module attribute — the REBIND dir pairs
# _SCAN_DIR/_get_scan_dir and _UPLOAD_DIR/_get_upload_dir stay DEFINED here and
# are patched on this module object, MAX_SCAN_RESULTS / _SESSION_PATH_CACHE_MAX
# / _try_import_rarfile are patched here and read back through _svc() by the
# moved bodies, and _session_path_cache is re-exported as the SAME dict object
# readers clear in place — keeps resolving at
# services.dataset_session_service.<name> for the downstream identity seams
# (services/dataset_export/planning.py, services/dataset_export_service.py,
# services/dataset_export/engine.py, routers/dataset.py) and the suites that
# patch and read them there (tests/test_dataset_session_pins.py,
# tests/test_dataset_session_service.py).
"backend/services/dataset_session_service.py" = ["F401"]
# db_images_write.py is the HOME module + import surface of the
# db_images_write_upsert / db_images_write_lifecycle / db_images_write_attributes
# sibling-module split (2026-07). Unlike the pure FILE facades above it keeps
# ten defs in place — tests/test_derived_state_contract.py pins their derived
# writer statements to THIS filename — and re-imports the 17 moved names at
# the BOTTOM of the module (managed import cycle: the siblings from-import
# the shared cursor helpers defined here). Those 17 re-imports plus the
# verbatim pre-split header block (os / datetime / Union / _row_to_dict now
# used only by the moved bodies) exist so the 27-name identity contract
# ``database.X is db_images_write.X`` (database.py:148,
# tests/test_db_images_write_pins.py TestReExportIdentityUnion) and the
# by-reference pulls db_collections._compact_persisted_metadata_json /
# db_tags._mark_image_tagged / the pins' _normalize_indexed_image_path import
# keep resolving on this module; the retained bodies call none of them.
"backend/db_images_write.py" = ["F401"]
# config.py is the compatibility facade for the tagger_models /
# config_settings sibling-module split (2026-07). Same rationale as tagger.py
# above: the two re-export imports exist so every historical module attribute
# keeps resolving at config.<name> — TAGGER_MODELS is the identity-shared
# catalog ~20 modules origin-import (and tests/test_tagging_pins_service.py
# setitem-patches), and the settings-IO names (VALID_MIRRORS,
# get/save_download_mirror, get/save_thumbnail_cache_max_mb, the
# _read/_write/_normalize helpers, DEFAULT/MAX_THUMBNAIL_CACHE_MAX_MB) are
# read and patched on this module by tests/test_config_pins.py,
# tests/test_config_env.py, tests/test_disk_service.py and the lazy production
# importers (routers/models.py, services/disk_service.py, artist/assets.py,
# model_download_sources.py); the verbatim header ``import json`` stays (now
# called only from the moved config_settings bodies) so ``config.json`` keeps
# resolving; the facade body itself calls none of them.
"backend/config.py" = ["F401"]
# toriigate_tagger.py is the compatibility FILE facade for the
# toriigate_caption_parsing sibling-module split (2026-07). Same rationale as
# tagger.py above: the verbatim header import block stays (``json`` / ``re``
# are now called only from the moved parsing bodies) and the RATING_TAGS /
# EXPLICIT_HINT_TAGS / CAPTION_COUNT/ATTRIBUTE/PHRASE_PATTERNS re-imports
# exist so every historical module attribute keeps resolving at
# toriigate_tagger.<name> — the quartet / singleton / TORIIGATE_* constant /
# ToriiGateImageGeometryError seams stay DEFINED here and the moved
# _resize_for_inference resolves the geometry family back through _svc() at
# call time — for the suites that patch and read this module object
# (tests/test_toriigate_pins.py, tests/test_toriigate_tagger.py,
# tests/test_migration_019_sanitize_nl_captions.py, tests/test_model_service.py).
"backend/toriigate_tagger.py" = ["F401"]
# oppai_oracle_tagger.py is the compatibility FILE facade for the
# oppai_oracle_loader / oppai_oracle_inference sibling-module split (2026-07).
# Same rationale as tagger.py / toriigate_tagger.py above: the verbatim header
# import block stays (``csv`` / ``gc`` / ``Path`` / ``config`` /
# ``exclusive_ai_runtime`` / ``looks_like_cuda_oom`` / ``endpoint_label`` /
# ``get_hf_endpoint_order`` are now called only from the moved loader/inference
# bodies) so every historical module attribute keeps resolving at
# oppai_oracle_tagger.<name> — the ort/hf_hub lazy-import family, the
# preprocess-executor pair, the free letterbox/preprocess functions, the
# PAD/UNK/RATING constants and the singleton family stay DEFINED here and the
# moved methods resolve them back through _svc() at call time — for the suites
# that patch and read this module object (tests/test_oppai_pins.py,
# tests/test_oppai_oracle_tagger.py, tests/test_oppai_oracle_alias.py,
# tests/test_model_service_pins.py).
"backend/oppai_oracle_tagger.py" = ["F401"]
# services/export_template_engine.py is the compatibility facade for the
# export_template_presets / export_tag_pipeline / export_rating_quality /
# export_template_render sibling-module split (2026-07). Same rationale as
# db_query.py above: its import block exists so every historical
# ``services.export_template_engine.<name>`` keeps resolving BY REFERENCE —
# the lazy origin-module seams (routers/tags.py:645 list_presets +
# TEMPLATE_VARIABLES, tag_export/captions.py:166+536 normalize_lora_tag +
# build_export_caption, tag_export/preview.py:30, dataset_export/
# captions.py:125) and the eager ``is_kaomoji_tag`` identity imports
# (smart_tag/consensus.py:15, smart_tag/results.py:19), locked by
# tests/test_export_template_pins.py (TestConsumerSeams); only
# ``build_export_caption`` stays defined in the facade, and it calls a
# fraction of the re-exported surface.
"backend/services/export_template_engine.py" = ["F401"]
# routers/tags_bulk.py is the compatibility FILE facade for the
# tags_bulk_models / tags_bulk_journal_ops sibling-module split (2026-07).
# Same rationale as routers/images.py above: the verbatim header import block
# stays (threading / contextmanager / the pydantic names / PROMPT_MATCH_MODE_*
# are now called only from the moved model + journal/transaction bodies; the
# one exception is ``from services import tag_bulk_journal``, which moved to
# tags_bulk_journal_ops.py because the endpoints' verbatim lazy re-imports
# would F811-shadow a dead eager copy) and the tags_bulk_models /
# tags_bulk_journal_ops
# re-imports exist so every historical module attribute keeps resolving at
# routers.tags_bulk.<name> -- the patched trio BULK_TAG_ID_CHUNK_SIZE /
# _preserve_row / _estimate_scope_total plus ALL its callers stay DEFINED
# here, the _op_lock / _op_run_lock / _op_state singletons and the request
# models are re-exported BY REFERENCE -- for the suites that patch and read
# this module object (tests/test_tags_bulk_pins.py,
# tests/test_routers/test_tags_bulk.py).
"backend/routers/tags_bulk.py" = ["F401"]
# services/dataset_translate_service.py is the compatibility facade for the
# dataset_translate_models / dataset_translate_cache / dataset_translate_parsing
# / dataset_translate_providers sibling-module split (2026-07). Same rationale
# as export_template_engine.py above: its import block exists so every
# historical ``services.dataset_translate_service.<name>`` keeps resolving BY
# REFERENCE — ``httpx`` is the module singleton the MockTransport harness
# patches through this namespace (``svc.httpx.AsyncClient``),
# _TRANSLATION_CACHE_LOCK / _translation_cache_path / _looks_like_tag_list /
# _translation_lang_code / _translation_source_lang are read and called
# through this module object by the pin suite — for the suites that patch and
# read them there (tests/test_dataset_translate_pins.py,
# tests/test_dataset_translate.py, routers/dataset.py's re-export block). The
# three cache-STATE seams (_TRANSLATION_CACHE, _TRANSLATION_CACHE_MAX_ITEMS,
# DEFAULT_CACHE_DIR) are deliberately NOT imported here — the module-class
# swap at the bottom of the facade live-forwards them to
# dataset_translate_cache instead; the facade body calls a fraction of the
# re-exported surface.
"backend/services/dataset_translate_service.py" = ["F401"]
# services/update_service.py is the compatibility facade for the
# update_service_channel / update_service_delivery mixin split (2026-07).
# Same rationale as tagger.py above: the verbatim header import block plus
# the channel/delivery re-imports exist so every historical module attribute
# — the ~30 test-imported privates (_MAX_UPDATE_ARCHIVE_*, _version_*, the
# SSRF host-allowlist block, the urllib/sys aliases) and the string-path
# patched globals (UPDATE_API_URL, CONFIG_DIR, UPDATE_DIR, PACKAGE_ROOT,
# urllib.request.urlopen) — keeps resolving at services.update_service.<name>
# for the suites that patch and import them there
# (tests/test_update_service_pins.py, tests/test_update_service.py,
# tests/test_update_worker.py, tests/test_update_cli.py,
# tests/test_update_archive_validation.py).
"backend/services/update_service.py" = ["F401"]
# censor.py is the compatibility FILE facade for the censor_transforms
# sibling-module split (2026-07). Same rationale as tagger.py above: the
# verbatim header import block stays (``ImageFilter`` / ``ImageDraw`` and the
# CENSOR_DEFAULT_BLOCK_SIZE / CENSOR_DEFAULT_BLUR_RADIUS config constants are
# now called only from the moved ``Censor`` transform bodies) and the
# ``from censor_transforms import Censor`` re-import is a pure BY-REFERENCE
# re-export the facade body itself never calls — it keeps ``censor.Censor``
# the SAME class object so services/censor/output_io.py's lazy
# ``from censor import Censor`` and the string patch
# "censor.Censor.apply_censoring" (tests/test_censor_service_pins.py:1079)
# keep observing class-attribute patches; the ort / _cv2 / _detector rebind
# seams stay DEFINED here (tests/test_censor_pins.py TestModuleAnchor,
# tests/test_routers/test_prompts_censor_similarity_artists.py).
"backend/censor.py" = ["F401"]
# services/tagging_pipeline_service.py is the facade of the
# _tagging_pipeline_persistence mixin split (2026-07). Same rationale as
# update_service.py above: the verbatim header import block stays —
# ``ai_job_queue_store`` is now called only from the moved persistence bodies
# (which resolve their facade seams back through _svc() at call time), but the
# import is kept so the historical module attribute
# services.tagging_pipeline_service.ai_job_queue_store keeps resolving
# (claude-tagpipe-pins-REPORT.md §5; tests/test_tagging_pipeline_pins.py,
# tests/test_tagging_pipeline_service.py patch this module object).
"backend/services/tagging_pipeline_service.py" = ["F401"]
# Test bodies routinely bind a call result for readability/debugging even when
# the value is not asserted on; F841 stays enforced for production code (where
# a dead binding is a real smell) but is relaxed inside the test suite.
"backend/tests/**" = ["F841"]
